# fixed-container

./: .gitignore  .travis.yml  README.md  _clang-format  allocation_pattern.md  appveyor.yml  vector.md
docs/: allocation_pattern.md  vector.md
docs/vector/: constructor.md  destructor.md  operator=.md
fixed/: list.hpp
include/fixed/: allocation_pattern.hpp  list.hpp  listed_vector.hpp  string.hpp  unordered_map.hpp  vector.hpp
include/fixed/impl/: aligned_allocation_pattern.hpp  basic_allocation_pattern.hpp  basic_allocation_sources.hpp  basic_allocator.hpp  basic_list.hpp  basic_list_iterator.hpp  basic_listed_vector.hpp  basic_listed_vector_iterator.hpp  basic_pointer_iterator.hpp  basic_small_string.hpp  basic_string.hpp  basic_unordered_map.hpp  basic_vector.hpp  constexpr_allocation_pattern.hpp  fixed_def.hpp  fixed_type_traits.hpp  iterator.hpp
include/heapless/: string.hpp  unordered_map.hpp  vector.hpp
include/heapless/impl/: basic_small_string.hpp  basic_string.hpp  basic_unordered_map.hpp  basic_vector.hpp  iterator.hpp
test/: .travis.yml  CMakeLists.txt  test_alloc_source.cpp  test_allocation_pattern.cpp  test_basic_list_iterators.cpp  test_function_unary.hpp  test_functions_iterators.hpp  test_functions_unary_containers.hpp  test_iterators.cpp  test_list.cpp  test_pointer_iterators.cpp  test_string.cpp  test_struct.hpp  test_unordered_map.cpp  test_vector.cpp
